cmath.hpp

#include <cmath>

double PI = M_PI;
double E = M_E;

double xcos(double x)
{
    return cos(x);
}
double xsin(double x)
{
    return sin(x);
}
double xtan(double x)
{
    return tan(x);
}
double xacos(double x)
{
    return acos(x);
}
double xasin(double x)
{
    return asin(x);
}
double xatan(double x)
{
    return atan(x);
}
double xpow(double x, double y)
{
    return pow(x, y);
}
double xsqrt(double x)
{
    return sqrt(x);
}
double xexp(double x)
{
    return exp(x);
}
double xlog(double x)
{
    return log(x);
}
double xlog10(double x)
{
    return log10(x);
}
int xabs(int x)
{
    return abs(x);
}
double xsignbit(double x)
{
    return signbit(x);
}

double xround(double x)
{
    return round(x);
}
double xceil(double x)
{
    return ceil(x);
}
double xfloor(double x)
{
    return floor(x);
}
double xtrunc(double x)
{
    return trunc(x);
}
double xfmin(double x, double y)
{
    return fmin(x, y);
}
double xfmax(double x, double y)
{
    return fmax(x, y);
}
double xcbrt(double x)
{
    return cbrt(x);
}
double xcosh(double x)
{
    return cosh(x);
}
double xexpm1(double x)
{
    return expm1(x);
}
double xfabs(double x)
{
    return fabs(x);
}
double xfdim(double x, double y)
{
    return fdim(x, y);
}
double xhypot(double x, double y)
{
    return hypot(x, y);
}
double xfma(double x, double y, double z)
{
    return fma(x, y, z);
}
double xfmod(double x, double y)
{
    return fmod(x, y);
}
double xsinh(double x)
{
    return sinh(x);
}
double xtanh(double x)
{
    return tanh(x);
}
double xatan2(double x, double y)
{
    return atan2(x, y);
}